# CHSH-Game

./: .cursorignore  .dockerignore  .gitignore  AQM_JOE_THEME_DESIGN.md  BUG_FIXES_SUMMARY.md  CACHE_THROTTLING_FIXES.md  CACHE_THROTTLING_IMPROVEMENTS.md  CHSH-Game.code-workspace  DASHBOARD_FORCE_REFRESH_REMOVAL.md  DASHBOARD_IMPROVEMENTS_SUMMARY.md  DASHBOARD_PERFORMANCE_OPTIMIZATION.md  DASHBOARD_REFACTORING_COMPLETE.md  DEBUGGING_INSTRUCTIONS.md  Dockerfile  Dockerfile.test  IMPLEMENTATION_SUMMARY.md  LAST_ROUND_RESULTS_IMPLEMENTATION.md  LICENSE  LOAD_TEST_README.md  MODE_TOGGLE_IMPLEMENTATION_SUMMARY.md  PLAYER_QUESTION_ASSIGNMENT_FIX.md  PYRIGHT_COMPLIANCE_SUMMARY.md  PYTEST_FIXES_COMPLETE.md  PYTEST_FIXES_COMPREHENSIVE_UPDATE.md  PYTEST_SERVER_INTEGRATION.md  Procfile  README.md  RECONNECTION_FIXES_SUMMARY.md  REFACTORING_COMPLETION_SUMMARY.md  REFACTORING_SUMMARY.md  STEP_4_IMPLEMENTATION_SUMMARY.md  TEAMS_STREAMING_IMPLEMENTATION_COMPLETE.md  TEAM_NAME_CACHING_IMPLEMENTATION.md  TEAM_NAME_CONFLICT_RESOLUTION_TESTING.md  TEAM_RECONNECTION_IMPLEMENTATION.md  TEST_COMPLETION_SUMMARY.md  TEST_FIXES_SUMMARY.md  THROTTLED_FORCE_REFRESH_IMPLEMENTATION.md  THROTTLING_FIXES_FINAL_SUMMARY.md  THROTTLING_FIXES_SUMMARY.md  (+24 more)
.ai-generated-md/: CONNECTION_STABILITY_FIXES.md  Major-mode-upgrade-plan.md  readme-new.md  readme-new2.md
.ai-generated-md/cline-other/: pause-button.md  review_and_improvements.md
.ai-generated-md/code review 2025 June 22/: README.md  action-plan.md  backend-analysis.md  comprehensive-code-review.md  frontend-analysis.md  performance-analysis.md  security-analysis.md
.ai-generated-md/design/: correlation_calculation_improvements.md  dashboard_improvements.md  team_joining_improvements.md
.ai-generated-md/docs/: download-endpoint.md  load-testing-architecture.md
.ai-generated-md/job summary/: BUG_FIXES_SUMMARY.md  CACHE_INVALIDATION_BUG_FIX.md  CACHE_INVALIDATION_TEST_FIXES.md  DASHBOARD_IMPROVEMENTS_SUMMARY.md  ENHANCED_SERVER_ERROR_HANDLING.md  FINAL_THROTTLING_SUCCESS_REPORT.md  FIXED_BUG_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LOGGING_MIGRATION_SUMMARY.md  N+1_query_bug_fix_summary.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PYTEST_SERVER_INTEGRATION.md  SELECTIVE_CACHE_INVALIDATION_IMPROVEMENTS.md  SERVER_FUNCTIONALITY_TESTS.md  STEP_3_IMPLEMENTATION_SUMMARY.md  TEAMS_STREAMING_IMPLEMENTATION_COMPLETE.md  TEST_COVERAGE_IMPROVEMENTS.md  team_disconnect_fix_summary.md
.ai-prompts/: AQM_JOE_THEME_DESIGN.md  helper_hints.md  script.md  strategy.md  to throw at agent.md  v2-chsh-game.md
.cursor/: Dockerfile  environment.json
.cursor/rules/: min-code-change.mdc  use-pytest.mdc
.github/workflows/: auto-release.yml  clean-up-all-unused-auto-releases.md  code-reviewer.yml.disabled  docker-build.yml  python-tests.yml
design/: server_startup_changes.md
docs/: caching-implementation.md
load_test/: IMPLEMENTATION_SUMMARY.md  LOAD_TEST_README.md  __init__.py  config.py  dashboard.py  load_test_config.yaml  load_test_requirements.txt  metrics.py  orchestrator.py  player.py  reporter.py  team_manager.py  utils.py
manus-other/: Live Quiz Application Architecture Design.md  todo.md
migrations/: add_database_indexes.py
sample-data/: chsh-game-data-2.csv  chsh-game-data.csv
src/: config.py  game_logic.py  main.py  state.py
tests/: conftest.py  test_coverage_runner.py
(+112 files in other folders)
